# ackerrman_plat

./: .gitignore  README.md
src/ackermann_platform/: example_user_planner.py  start_platform.sh
src/ackermann_platform/backend/: algorithm_manager.py  main.py  path_manager.py  planner_base.py  requirements.txt  ros_bridge.py
src/ackermann_platform/frontend/src/: App.css  App.tsx  types.ts
src/ackermann_platform/frontend/src/components/: ControlPanel.tsx  DataPanel.tsx  PathManager.tsx  TrajectoryView.tsx
src/ackermann_platform/frontend/src/hooks/: useWebSocket.ts
src/pure_pursuit/: package.xml  setup.py  start.md
src/pure_pursuit/config/: pp_params.yaml
src/pure_pursuit/data/: path.csv  path_model.sdf
src/pure_pursuit/launch/: pure_pursuit_planner.launch.py
src/pure_pursuit/pure_pursuit/: __init__.py  csv_path_publisher.py  node.py  pp_planner.py
src/pure_pursuit/pure_pursuit/test/: bridge_node.py  compare_steering.py  gazebo_path_visualizer.py  generate_path_sdf.py  path_visualizer.py
src/racebot_control/: CMakeLists.txt  package.xml
src/racebot_control/config/: keyboard_teleop.yaml
src/racebot_control/launch/: racebot.launch.py
src/racebot_control/script/: gazebo_odometry.py  keyboard_teleop.py  servo_commands.py  transform.py
src/racebot_description/: CMakeLists.txt  package.xml
src/racebot_description/config/: controller_params.yaml  ros2_control.yaml
src/racebot_description/launch/: description.launch.py
src/racebot_description/scripts/: generate_path_sdf.py
src/racebot_description/urdf/: racebot.xacro
